--- a/index.html
+++ b/index.html
@@ -34,6 +34,18 @@
                                 <p class="contador-digito-numero">7</p>
                                 <p class="contador-digito-texto">dias</p>
                             </div>
+                            <div class="contador-digito">
+                                <p class="contador-digito-numero">7</p>
+                                <p class="contador-digito-texto">horas</p>
+                            </div>
+                            <div class="contador-digito">
+                                <p class="contador-digito-numero">7</p>
+                                <p class="contador-digito-texto">min</p>
+                            </div>
+                            <div class="contador-digito">
+                                <p class="contador-digito-numero">7</p>
+                                <p class="contador-digito-texto">seg</p>
+                            </div>
                         </div>
                     </div>
                     <div class="aba-conteudo">
